syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "github.com/nelsonalves117/gRPC-delivery/pb";

message Location {
    double latitude = 1;
    double longitude = 2;
}

enum OrderStatus {
    UNSET = 0;
    PENDING = 1;
    ACCEPTED = 2;
    IN_TRANSIT = 3;
    DELIVERED = 4;
    CANCELED = 5;
}

message StartRequest {
    string order_id = 1;
    string customer_id = 2;
    string restaurant_id = 3;
    string driver_id = 4;
    Location delivery_location = 5;
    repeated string item_ids = 6;
    google.protobuf.Timestamp order_time = 7;
    OrderStatus status = 8;
}

message StartResponse {
    string order_id = 1;
}

message EndRequest {
    string order_id = 1;
    google.protobuf.Timestamp delivery_time = 2;
    float total_amount = 3;
}

message EndResponse {
    string order_id = 1;
}

message LocationRequest {
    string driver_id = 1;
    Location location = 2;
}

message LocationResponse {
    string driver_id = 1;
    int64 count = 2;
}

service Delivery {
    rpc Start(StartRequest) returns(StartResponse) {}
    rpc End(EndRequest) returns(EndResponse) {}
    rpc Location(stream LocationRequest) returns (LocationResponse) {}
}